--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=backend
 spring.data.mongodb.uri=mongodb+srv://kalharajay:mongostories@story-page.3vyhahy.mongodb.net/stories?retryWrites=true&w=majority
-server.port=8080
+server.port=${PORT:8080}
